[package]
name = "jing-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
volatile = "0.2.6"
spin = "0.5"
x86_64 = "0.14"
uart_16550 = "0.2"
pic8259 = "0.10"
pc-keyboard = "0.5"
linked_list_allocator = "0.9"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# 目标配置
[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33


[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false

[[bin]]
name = "simple-kernel"
path = "src/simple_main.rs"
test = false
bench = false
